{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "bbbc02c0-a3aa-4c3d-8173-ceda88c9f3d7",
            "actions": [
                {
                    "name": "PrimaryFinger",
                    "type": "Value",
                    "id": "e2cd0dfe-ad37-44c5-835f-92074dd34f55",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFinger",
                    "type": "Value",
                    "id": "0b97894a-643f-4cf6-9b45-f834c01ea84d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "0c1138a3-e797-456d-acd5-73b73befdf0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TestZoom",
                    "type": "Button",
                    "id": "99f5167a-5996-42d5-873d-12a1dfde2030",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c1a00c8-ac3b-41fd-bdde-67e961089542",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d7d0707-3872-47b9-96ca-a97ba54bc09f",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5d3b452-c3e4-43ec-8a48-5c7af51c628a",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9d2616d-27cf-4099-90de-842d1ee2836f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}